deploy/migration.yaml
apiVersion: v1
kind: Pod
metadata:
  name: cmdb-migration
  namespace: default
  labels:
    app: cmdb-migration
spec:
  restartPolicy: Never
  containers:
  - name: migration
    image: infoblox/migrate:latest
    imagePullPolicy: Always
    volumeMounts:
      - mountPath: /cmdb-migrations
        name: migrations
    command:
      - /migrate
    args:
      - "--verbose"
      - "--source"
      - "file:///cmdb-migrations/migrations"
      - "--database.address"
      - "postgres.contacts:5432"
      - "--database.name"
      - "atlas_contacts_app"
      - "--database.user"
      - "postgres"
      - "--database.password"
      - "postgres"
      - up
      # to get to a particular level append following
      #- "2"
  volumes:
    - name: migrations
      emptyDir: {}
---
