deploy/kube.yaml
apiVersion: v1
kind: Service
metadata:
  name: contacts-app
  namespace: contacts
  labels:
    app: contacts-app
spec:
  type: NodePort
  ports:
    - name: http
      port: 8080
      protocol: TCP
      nodePort: 31500
  selector:
    app: contacts-app
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: contacts
  name: contacts-app-ingress
  annotations:
    ingress.kubernetes.io/auth-url: http://authn-stub.atlas-stubs.svc.cluster.local/auth
    ingress.kubernetes.io/auth-response-headers: Grpc-Metadata-Authorization
    ingress.kubernetes.io/rewrite-target: /v1
spec:
  rules:
  - http:
      paths:
      - path: /atlas-contacts-app/v1
        backend:
          serviceName: contacts-app
          servicePort: 8080
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: contacts
  name: contacts-app-doc-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /atlas-contacts-app
        backend:
          serviceName: contacts-app
          servicePort: 8080
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: contacts-app
  namespace: contacts
  labels:
    app: contacts-app
spec:
  selector:
    matchLabels:
      app: contacts-app
  replicas: 1
  template:
    metadata:
      labels:
        app: contacts-app
    spec:
      containers:
      - name: server
        image: infobloxcto/contacts-server:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8081
          protocol: TCP
        - containerPort: 9090
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8081
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 5
          successThreshold: 1
          failureThreshold: 10
        readinessProbe:
          httpGet:
            path: /ready
            port: 8081
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 5
          successThreshold: 1
          failureThreshold: 10
---
